--- a/about-us.html
+++ b/about-us.html
@@ -30,6 +30,9 @@
     <link href="css/custom.css" rel="stylesheet" type="text/css">
 </head>
 
+<!-- about -->
+
+
 <body>
     <!-- Start Header -->
     <header>
